# CheckPasswords

./: .gitignore  CHANGELOG.md  README.md  fetch_2fa.py  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yaml
checkpasswords/: __main__.py  auxiliary.py  credentials.py  mfa_sites.txt
checkpasswords/io/: input.py  output.py
documentation/reference/: MODULES.md  README.md
documentation/reference/checkpasswords/: auxiliary.md  credentials.md  index.md  module.md
documentation/reference/checkpasswords/io/: index.md  input.md  output.md
tests/: test_auxiliary.py  test_input.py  test_output.py
tests/data/: 10k.txt  advanced.ansi  advanced.csv  advanced.json  advanced.md  advanced.raw.json  advanced.txt  mfa.txt  simple.ansi  simple.csv  simple.json  simple.md  simple.raw.json  simple.txt
